# redakt

./: .gitignore  CLAUDE.md  LICENSE  README.md  Redakt.spec  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assets/: icon.icns
manifesto/: guide.html  index.html  manifesto.html  vercel.json
npm/: package.json  tsconfig.json
npm/src/: index.ts  types.ts
qwenkk/: __init__.py  __main__.py  app.py  constants.py  exporters.py
qwenkk/core/: anonymizer.py  entities.py  llamacpp_manager.py  model_manager.py  prompts.py  redactor.py  sysinfo.py  worker.py
qwenkk/parsers/: __init__.py  base.py  docx_parser.py  excel_parser.py  image_parser.py  pdf_parser.py
qwenkk/ui/: drop_zone.py  file_list_widget.py  i18n.py  main_window.py  progress_widget.py  settings_dialog.py  setup_wizard.py  status_bar.py  theme.py
redakt/: __init__.py  __main__.py  app.py  constants.py  exporters.py
redakt-tauri/: package.json
redakt-tauri/src/: app.js  index.html  style.css  styles.css
redakt-tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
redakt-tauri/src-tauri/capabilities/: default.json
redakt-tauri/src-tauri/src/: anonymizer.rs  commands.rs  download.rs  entities.rs  export.rs  lib.rs  llm.rs  main.rs  redactor.rs  types.rs
redakt-tauri/src-tauri/src/commands/: dialog.rs  document.rs  export.rs  mod.rs  model.rs  server.rs  sysinfo.rs
redakt-tauri/src-tauri/src/parsers/: docx.rs  mod.rs  pdf.rs  txt.rs  xlsx.rs
redakt/api/: __init__.py  llamacpp_headless.py  server.py
redakt/core/: anonymizer.py  download_manager.py  entities.py  llamacpp_manager.py  md_renderer.py  model_manager.py  prompts.py  redactor.py
redakt/parsers/: __init__.py  base.py  docx_parser.py  excel_parser.py  image_parser.py  pdf_parser.py
redakt/ui/: drop_zone.py  i18n.py  main_window.py  settings_dialog.py  setup_wizard.py  status_bar.py  theme.py
scripts/: build_linux.sh  build_mac.sh  build_macos.sh  build_windows.bat  download-llama-server.sh  fetch_llamacpp.py
tauri-app/src/: app.js  style.css
tauri-app/src-tauri/src/: anonymizer.rs  commands.rs  entities.rs  llm.rs
tests/: test_age_conversion.py  test_api.py
