[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwenkk"
version = "0.1.0"
description = "DeIdentify - Local medical document anonymization powered by Qwen LLM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bora" },
]
keywords = ["anonymization", "deidentification", "medical", "PII", "KVKK", "LLM", "privacy"]

dependencies = [
    "PySide6>=6.6",
    "ollama>=0.4",
    "python-docx>=1.1",
    "PyMuPDF>=1.24",
    "openpyxl>=3.1",
    "pydantic>=2.0",

    "httpx>=0.27",
    "Pillow>=10.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.3",
    "pyinstaller>=6.0",
    "ruff>=0.5",
]
ocr = [
    "pytesseract>=0.3",
]

[project.scripts]
qwenkk = "qwenkk.__main__:main"

[project.gui-scripts]
deidentify = "qwenkk.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
qt_api = "pyside6"
