[package]
name = "redakt"
version = "0.1.0"
edition = "2021"

[lib]
name = "redakt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
calamine = "0.26"
quick-xml = "0.37"
zip = "2"
pdf-extract = "0.8"
sysinfo = "0.33"
dirs = "6"
futures-util = "0.3"
